--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,11 @@
     </dependency>
 
     <!-- Integration Test Dependencies -->
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>flexible-publish</artifactId>
+      <version>0.15.2</version>
+    </dependency>
 
     <!-- Form element path plugin to simplify location of UI elements in HtmlUnit tests -->
     <dependency>
