--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
     <git-plugin.version>3.9.1</git-plugin.version>
     <workflow-step.version>2.19</workflow-step.version>
     <workflow-job.version>2.32</workflow-job.version>
-    <structs.version>1.17</structs.version>
+    <structs.version>1.19</structs.version>
     <antisamy-markup-formatter.version>1.5</antisamy-markup-formatter.version>
     <dashboard-view.version>2.9.4</dashboard-view.version>
     <script-security.version>1.58</script-security.version>
@@ -423,11 +423,17 @@
       <version>${jenkins-maven-plugin.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>job-dsl</artifactId>
+      <version>1.74</version>
+      <scope>test</scope>
+    </dependency>
     <!-- Configuration as Code -->
     <dependency>
       <groupId>io.jenkins</groupId>
       <artifactId>configuration-as-code</artifactId>
-      <version>1.0</version>
+      <version>1.18</version>
       <scope>test</scope>
     </dependency>
     <!-- Groovy -->
