JENKINS-57921 added remaining checkers

--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-freestyle.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-freestyle.yaml
@@ -6,6 +6,8 @@ jobs:
                   aggregatingResults(true)
                   tools {
                       java {
+                        id('java-id')
+                        name('java-name')
                          reportEncoding('UTF-8')
                       }
                   }
