--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-cpd.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-cpd.yaml
@@ -7,6 +7,7 @@ jobs:
                       tools {
                           cpd {
                                id('cpd-id')
+                              pattern('target/cpd.xml')
                                name('cpd-name')
                                reportEncoding('UTF-8')
                           }
