--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-warnings-ng.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-warnings-ng.yaml
@@ -3,8 +3,26 @@ jobs:
       freeStyleJob('dsl-freestyle-job') {
           publishers {
               recordIssues {
-                  aggregatingResults(true)
-                  tools {
+                    aggregatingResults(true)
+                    blameDisabled(true)
+                    enabledForFailure(true)
+                    healthy(10)
+                    ignoreFailedBuilds(false)
+                    ignoreQualityGate(true)
+                    id('test-id')
+                    name('test-name')
+                    minimumSeverity('ERROR')
+                    sourceCodeEncoding('UTF-8')
+                    unhealthy(50)
+                    referenceJobName('test-job')
+                    qualityGates {
+                        qualityGate {
+                            threshold(10)
+                            type('TOTAL')
+                            unstable(true)
+                        }
+                    }
+                    tools {
                       java {
                         id('java')
                         name('Java')
