--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: java
 jdk: oraclejdk8
 install : true
 script: mvn -B -V clean jacoco:prepare-agent verify jacoco:report  -Djenkins.test.timeout=1000
+cache:
+  directories:
+    - $HOME/.m2
 after_success:
 - bash <(curl -s https://codecov.io/bash)
-
 notifications:
   webhooks:
     urls:
