--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk: oraclejdk8
 install : true
-script: mvn -B -V clean jacoco:prepare-agent verify jacoco:report  -Djenkins.test.timeout=1000
+script: mvn -B -V clean jacoco:prepare-agent verify jacoco:report -DskipITs -Djenkins.test.timeout=1000
 cache:
   directories:
     - $HOME/.m2
