--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <junit-plugin.version>1.24</junit-plugin.version>
     <git-plugin.version>3.9.1</git-plugin.version>
     <workflow-api.version>2.34</workflow-api.version>
+    <workflow-cps.version>2.67</workflow-cps.version>
     <workflow-step.version>2.19</workflow-step.version>
     <workflow-job.version>2.32</workflow-job.version>
     <structs.version>1.19</structs.version>
@@ -271,8 +272,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-cps</artifactId>
-      <version>2.67</version>
-      <scope>compile</scope>
+      <version>${workflow-cps.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
@@ -466,13 +466,6 @@
       <groupId>io.jenkins</groupId>
       <artifactId>configuration-as-code</artifactId>
       <version>1.18</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- Groovy -->
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-cps</artifactId>
-      <version>2.67</version>
       <scope>test</scope>
     </dependency>
     <!-- stage -->
