Add a new symbol `recordFreeStyleIssues` to the Recorder.
This symbol is required to define a simple DSL that creates
freestyle jobs using the job-dsl plugin.

--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-freestyle.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-freestyle.yaml
@@ -2,7 +2,7 @@ jobs:
   - script: >
       freeStyleJob('freestyle-analysis-model') {
           publishers {
-              recordIssues {
+              recordFreeStyleIssues {
                   aggregatingResults(true)
                   tools {
                       java {
