--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     <!-- Project Dependencies Configuration -->
     <analysis-model-api.version>5.1.1</analysis-model-api.version>
     <analysis-model.version>5.1.1</analysis-model.version>
-    <forensics-api-plugin.version>0.1-alpha-1</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.1-alpha-1</git-forensics-plugin.version>
+    <forensics-api-plugin.version>0.1-alpha-3-SNAPSHOT</forensics-api-plugin.version>
+    <git-forensics-plugin.version>0.1-alpha-3-SNAPSHOT</git-forensics-plugin.version>
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
     <commons.lang.version>3.9</commons.lang.version>
     <commons.io.version>2.6</commons.io.version>
