--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-freestyle.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-freestyle.yaml
@@ -2,7 +2,7 @@ jobs:
   - script: >
       freeStyleJob('freestyle-analysis-model') {
           publishers {
-              recordFreeStyleIssues {
+              recordIssues {
                   aggregatingResults(true)
                   tools {
                       java {
