Added UI elements and required html File. Added a boolen to the PublishStep.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/steps/IssuesRecorder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/steps/IssuesRecorder/config.properties
@@ -6,3 +6,6 @@ description.enabledForFailure=Enable recording for failed builds.
 
 title.aggregatingResults=Aggregate results
 description.aggregatingResults=Aggregate results of all tools into a single result.
+
+title.failBuildOnError=Fail Build on Error.
+description.failBuildOnError=Fails Build if there is an error during job execution.
