--- a/src/main/resources/issues/publish-parameters.properties
+++ b/src/main/resources/issues/publish-parameters.properties
@@ -6,6 +6,8 @@ title.ignoreFailedBuilds=Ignore Failed Builds
 description.ignoreFailedBuilds=If checked, then only successful or unstable reference builds \
   will be considered. This option is enabled by default, since analysis results might be inaccurate if the build failed. \
   If unchecked, every build that contains a static analysis result is considered, even if the build failed.
+title.failBuildOnError=Fail Build on Error.
+description.failBuildOnError=Fails Build if there is an error during job execution. 
 title.referenceJob=Reference Job
 description.referenceJob=The reference job is the baseline that is used to determine which of the issues in the current \
     build are new, outstanding, or fixed. This baseline is also used to determine the number of new issues for the \
