Enable a non standard sort order for columns.
Refactored table models: now objects are used (rather than arrays). So
we are able to provide a sort order that does not depend on the
visualization but on the associated data model (in our case number
of elapsed days).

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <json.version>20190722</json.version>
     <jackson-databind.version>2.9.9</jackson-databind.version>
     <slf4j.version>1.7.28</slf4j.version>
+    <prettytime.version>4.0.2.Final</prettytime.version>
 
     <!-- Test Library Dependencies Versions -->
     <junit.version>5.5.1</junit.version>
@@ -187,6 +188,11 @@
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>analysis-model-api</artifactId>
       <version>${analysis-model-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ocpsoft.prettytime</groupId>
+      <artifactId>prettytime</artifactId>
+      <version>${prettytime.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
