--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-spotbugs.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-spotbugs.yaml
@@ -3,7 +3,7 @@ jobs:
       freeStyleJob('freestyle-analysis-model') {
           publishers {
               recordIssues {
-                  tool {
+                  tools {
                       spotBugs {
                            id('bugs')
                            name('SpotBugs Warnungen')
