Add UI configuration for freestyle job and snippet generator.

--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-warnings-ng.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-warnings-ng.yaml
@@ -5,6 +5,7 @@ jobs:
               recordIssues {
                     aggregatingResults(true)
                     blameDisabled(true)
+                    forensicsDisabled(true)
                     enabledForFailure(true)
                     healthy(10)
                     ignoreFailedBuilds(false)
