--- a/src/main/resources/issues/scan-parameters.properties
+++ b/src/main/resources/issues/scan-parameters.properties
@@ -1,8 +1,11 @@
 title.sourceCodeEncoding=Source Code Encoding
 description.sourceCodeEncoding=Encoding of your source code. \
     Leave this field empty to use the default encoding of the platform (not recommended).
-title.blameDisabled=Disable Blame
+title.blameDisabled=Disable SCM Blames
 description.blameDisabled=If checked then author and commit blame information are not retrieved from the \
+  source code management system.
+title.forensicsDisabled=Disable SCM Forensics
+description.forensicsDisabled=If checked then file statistics are not gathered from the commit logs of \
   source code management system.
 title.filter=Issue Filters
 description.filter=The found set of issues will be matched with all of the specified set of filters. If no filter is \
