--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk: openjdk8
 install : true
-script: mvn -B -V clean verify -Djenkins.test.timeout=1000
+script: mvn -B -V clean verify -DskipITs
 cache:
   directories:
     - $HOME/.m2
