--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "remark-lint": "^6.0.2",
     "remark-preset-lint-recommended": "^3.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
+  },
   "scripts": {
     "lint-md": "remark ."
   },
