Add job DSL configuration test.

--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-warnings-ng.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/job-dsl-warnings-ng.yaml
@@ -3,6 +3,7 @@ jobs:
       freeStyleJob('dsl-freestyle-job') {
           publishers {
               recordIssues {
+                    aggregationTrend('NONE')
                     aggregatingResults(true)
                     blameDisabled(true)
                     forensicsDisabled(true)
