--- a/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/model/ReportScanningTool/config.properties
@@ -11,5 +11,4 @@ description.consoleOrPattern=<a href="{0}">Fileset ''includes''</a> setting that
     scanned for issues.
 title.defaultPattern=Default Pattern
 title.skipSymbolicLinks=Skip Symbolic Links
-description.skipSymbolicLinks=Toggle whether the file scanner will skip symbolic links.  This is useful when the \
-    scanned directory contains links that create a recursive structure (may not work on Windows).
+description.skipSymbolicLinks=Toggle whether the file scanner will skip symbolic links.
