Copy same help files to all steps.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/steps/PublishIssuesStep/config.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/steps/PublishIssuesStep/config.properties
@@ -1,7 +1,5 @@
 title.sourceCodeEncoding=Source Code Encoding
-description.sourceCodeEncoding=Encoding of your source code. \
-    Leave this field empty to use the default encoding of the platform (not recommended).
-
+description.sourceCodeEncoding=Encoding of your source code.
 title.name=Custom Name
 description.name=Optional custom display name of the tool, overwrites the default name of the registered tool.
 title.id=Custom ID
