--- a/src/main/resources/io/jenkins/plugins/analysis/core/util/QualityGate/config.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/util/QualityGate/config.properties
@@ -1,6 +1,6 @@
 title.threshold=Threshold
 description.threshold=If the actual number of issues is greater or equal than this threshold \
-    then a build is considered as unstable or failed, respectively. Values less or equal zero are ignored.
+    then a build is considered as unstable or failed, respectively.
 title.type=Type
 description.type=You can choose which property will be used to compare the provided threshold to \
     (overall number of issues, issues of a given severity, new issues, delta between two builds, etc.).
