--- a/src/main/resources/issues/publish-parameters.properties
+++ b/src/main/resources/issues/publish-parameters.properties
@@ -1,17 +1,15 @@
+description.reference=One important feature of the Warnings Plugin is the classification of issues as \
+  new, outstanding and fixed. In order to compute this classification, the plugin requires a reference build (baseline). \
+  New, fixed, and outstanding issues are then computed by comparing the issues in the current build and in the baseline.
+title.referenceJob=Reference Job
+description.referenceJob=The reference job provides the builds that can be selected as baseline.
 title.ignoreQualityGate=Ignore Quality Gate
-description.ignoreQualityGate=If checked, then the result of the quality gate is ignored when selecting a reference build. \
-  This option is disabled by default so a failing quality gate will be passed from build to build until the original reason \
-  for the failure has been resolved.
+description.ignoreQualityGate=If checked, then the last finished build of the reference job will be used as baseline \
+  no matter if the quality gate of that build has been passed or not.
 title.ignoreFailedBuilds=Ignore Failed Builds
-description.ignoreFailedBuilds=If checked, then only successful or unstable reference builds \
-  will be considered. This option is enabled by default, since analysis results might be inaccurate if the build failed. \
-  If unchecked, every build that contains a static analysis result is considered, even if the build failed.
+description.ignoreFailedBuilds=If checked, then only successful or unstable builds will be considered as baseline.
 title.failOnError=Fail On Errors
 description.failOnError=Fails the build if errors have been reported during the execution of this step.
-title.referenceJob=Reference Job
-description.referenceJob=The reference job is the baseline that is used to determine which of the issues in the current \
-    build are new, outstanding, or fixed. This baseline is also used to determine the number of new issues for the \
-    quality gate evaluation.
 title.status.total=Totals
 description.status.total=If the total number of issues is greater or equal than one of the specified thresholds then a \
   build is considered as unstable or failed, respectively. Values less or equal zero are ignored.
