--- a/src/main/resources/issues/scan-parameters.properties
+++ b/src/main/resources/issues/scan-parameters.properties
@@ -4,7 +4,7 @@ title.blameDisabled=Disable SCM Blames
 description.blameDisabled=If checked then author and commit blame information are not retrieved from the \
   source code management system.
 title.forensicsDisabled=Disable SCM Forensics
-description.forensicsDisabled=If checked then file statistics are not gathered from the commit logs of \
+description.forensicsDisabled=If checked then file statistics are not gathered from the commit logs of the \
   source code management system.
 title.filter=Issue Filters
 description.filter=Issues will be matched with all of the specified filters. If no filter is \
