--- a/src/main/resources/issues/recorder.properties
+++ b/src/main/resources/issues/recorder.properties
@@ -7,6 +7,5 @@ description.enabledForFailure=Enable recording for failed builds.
 title.aggregatingResults=Aggregate results
 description.aggregatingResults=Aggregate results of all tools into a single result.
 
-title.aggregationTrend=Aggregation trend
-description.aggregationTrend=Determines the position of the aggregation trend chart that shows all static analysis \
-  results in a single trend chart.
+title.trendChartType=Trend chart type
+description.trendChartType=Select trend charts and their position.
