--- a/src/main/resources/issues/publish-parameters.properties
+++ b/src/main/resources/issues/publish-parameters.properties
@@ -18,3 +18,5 @@ description.status.new=If the number of new issues is greater or equal than one 
   build is considered as unstable or failed, respectively. Values less or equal zero are ignored.
 qualityGates.description=You can define an arbitrary number of quality gates that will be evaluated after a build. \
   If a quality gate is not passed then the build can be set to unstable or failed, respectively.
+title.trendChartType=Trend chart type
+description.trendChartType=Select trend charts and their position.
