Add ConfigurationAsCode test.

--- a/src/main/resources/io/jenkins/plugins/analysis/core/model/WarningsPluginConfiguration/config.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/core/model/WarningsPluginConfiguration/config.properties
@@ -1,2 +1,2 @@
-sourceRoots.title=Source code roots
-sourceRoots.description=Valid and permitted source code locations on agents (outside of the workspace).
+sourceDirectories.title=Source code directories
+sourceDirectories.description=Valid and permitted source code locations on agents (outside of the workspace).
