--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     <!-- Project Dependencies Configuration -->
     <analysis-model-api.version>6.0.2</analysis-model-api.version>
     <analysis-model.version>6.0.2</analysis-model.version>
-    <forensics-api-plugin.version>0.4.1</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.3.2</git-forensics-plugin.version>
+    <forensics-api-plugin.version>0.5.0-SNAPSHOT</forensics-api-plugin.version>
+    <git-forensics-plugin.version>0.5.0-SNAPSHOT</git-forensics-plugin.version>
 
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
     <commons.lang.version>3.9</commons.lang.version>
