--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,17 +1,22 @@
-name: Java CI
+name: GitHub Actions
 
 on: [push]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+
+    runs-on: ${{ matrix.platform }}
+    name: on ${{ matrix.platform }}
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
+    - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn clean verify --file pom.xml  -Djenkins.test.timeout=5000
+      run: mvn -V clean verify --file pom.xml  -Djenkins.test.timeout=5000
