--- a/src/test/resources/io/jenkins/plugins/analysis/warnings/sourceDirectories.yaml
+++ b/src/test/resources/io/jenkins/plugins/analysis/warnings/sourceDirectories.yaml
@@ -1,5 +1,5 @@
 unclassified:
   warningsPlugin:
     sourceDirectories:
-    - path: "relative"
+    - path: "C:\\Windows"
     - path: "/absolute"
