--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <git-plugin.version>3.9.1</git-plugin.version>
     <workflow-api.version>2.34</workflow-api.version>
     <workflow-cps.version>2.67</workflow-cps.version>
-    <workflow-step.version>2.19</workflow-step.version>
+    <workflow-step-api.version>2.19</workflow-step-api.version>
     <workflow-job.version>2.32</workflow-job.version>
     <structs.version>1.19</structs.version>
     <antisamy-markup-formatter.version>1.5</antisamy-markup-formatter.version>
@@ -304,7 +304,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-step-api</artifactId>
-      <version>${workflow-step.version}</version>
+      <version>${workflow-step-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
