--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     <mockito.version>3.1.0</mockito.version>
     <assertj.version>3.13.2</assertj.version>
     <archunit.version>0.11.0</archunit.version>
-    <json-unit-fluent.version>2.8.1</json-unit-fluent.version>
+    <json-unit-fluent.version>2.10.0</json-unit-fluent.version>
     <xmlunit.version>1.6</xmlunit.version>
     <jsoup.version>1.12.1</jsoup.version>
     <json-smart.version>2.3</json-smart.version>
@@ -178,7 +178,11 @@
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>2.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
