--- a/src/main/resources/io/jenkins/plugins/analysis/warnings/axivion/AxivionSuite/config.properties
+++ b/src/main/resources/io/jenkins/plugins/analysis/warnings/axivion/AxivionSuite/config.properties
@@ -1,6 +1,6 @@
-title.projectUrl=Axivion Server URL
-description.projectUrl=This is the URL to the project on the Axivion Server.
+title.projectUrl=Axivion Server Project URL
+description.projectUrl=This is the URL to the project on the Axivion Server (e.g. http://localhost:9090/axivion/projects/[project_to_analyze]).
 title.basedir=Base Directory
-description.basedir=This is the base directory in your workspace (must match the projectdir setting of analysis). You can use jenkins environment variables here, e.g. $WORKSPACE
+description.basedir=This is the base directory in your workspace (must match the projectdir setting of the analysis). You can use jenkins environment variables here, e.g. $WORKSPACE
 title.credentialsId=Credentials ID
-description.credentialsId=The ID of the credentials (as stored in jenkin's credential store) used for authentication against the Axivion Server.
+description.credentialsId=The ID of the credentials (as stored in Jenkins credential store) used for authentication against the Axivion Server.
