--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <jenkins-test-harness.version>2.49</jenkins-test-harness.version>
 
     <!-- Project Dependencies Configuration -->
+    <codingstyle.version>0.2.7</codingstyle.version>
     <analysis-model-api.version>7.0.2</analysis-model-api.version>
     <analysis-model.version>7.0.2</analysis-model.version>
     <forensics-api-plugin.version>0.6.1</forensics-api-plugin.version>
@@ -779,7 +780,7 @@
         </executions>
         <configuration>
           <failOnViolation>false</failOnViolation>
-          <configLocation>etc/checkstyle-configuration.xml</configLocation>
+          <configLocation>checkstyle-configuration.xml</configLocation>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <excludes>**/*Assert*.java,**/InjectedTest.java,**/Messages.java</excludes>
         </configuration>
@@ -788,6 +789,11 @@
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
             <version>${checkstyle.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>edu.hm.hafner</groupId>
+            <artifactId>codingstyle</artifactId>
+            <version>${codingstyle.version}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -807,7 +813,7 @@
         </executions>
         <configuration>
           <rulesets>
-            <ruleset>etc/pmd-configuration.xml</ruleset>
+            <ruleset>pmd-configuration.xml</ruleset>
           </rulesets>
           <excludeRoots>
             <excludeRoot>target/generated-sources/localizer</excludeRoot>
@@ -829,6 +835,11 @@
             <groupId>net.sourceforge.pmd</groupId>
             <artifactId>pmd-java</artifactId>
             <version>${pmd.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>edu.hm.hafner</groupId>
+            <artifactId>codingstyle</artifactId>
+            <version>${codingstyle.version}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -852,9 +863,16 @@
           <effort>Max</effort>
           <relaxed>false</relaxed>
           <fork>true</fork>
-          <excludeFilterFile>etc/spotbugs-exclusion-filter.xml</excludeFilterFile>
+          <excludeFilterFile>spotbugs-exclusion-filter.xml</excludeFilterFile>
           <includeTests>true</includeTests>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>edu.hm.hafner</groupId>
+            <artifactId>codingstyle</artifactId>
+            <version>${codingstyle.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.revapi</groupId>
