--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
     <font-awesome-api.version>5.10.1-1-beta1</font-awesome-api.version>
     <jquery3-api.version>3.4.1-1-beta1</jquery3-api.version>
     <popper-api.version>1.15.0-1-beta1</popper-api.version>
-    <bootstrap4-api.version>4.1.3-1-beta2-SNAPSHOT</bootstrap4-api.version>
-    <data-tables-api.version>1.10.20-1-beta3-SNAPSHOT</data-tables-api.version>
+    <bootstrap4-api.version>4.1.3-1-beta2</bootstrap4-api.version>
+    <data-tables-api.version>1.10.20-1-beta3</data-tables-api.version>
     <echarts-api.version>4.4.0-1-beta1</echarts-api.version>
 
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
